--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/icon/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chrome Extensioin + Preact + TS + Vite App - Popup</title>
+    <title>Kepo Chrome Extensioin</title>
   </head>
   <body>
     <div id="app"></div>
