fix basic popup layout

--- a/options.html
+++ b/options.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/options/index.tsx"></script>
+    <script type="module" src="/src/views/options.tsx"></script>
   </body>
 </html>
